; ModuleID = '/home/carl/AnghaBench/freebsd/sys/security/mac/extr_mac_posix_sem.c_mac_posixsem_check_stat.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/security/mac/extr_mac_posix_sem.c_mac_posixsem_check_stat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucred = type { i32 }
%struct.ksem = type { i32 }

@posixsem_check_stat = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_posixsem_check_stat(%struct.ucred* %0, %struct.ucred* %1, %struct.ksem* %2) #0 {
  %4 = alloca %struct.ucred*, align 8
  %5 = alloca %struct.ucred*, align 8
  %6 = alloca %struct.ksem*, align 8
  %7 = alloca i32, align 4
  store %struct.ucred* %0, %struct.ucred** %4, align 8
  store %struct.ucred* %1, %struct.ucred** %5, align 8
  store %struct.ksem* %2, %struct.ksem** %6, align 8
  %8 = load i32, i32* @posixsem_check_stat, align 4
  %9 = load %struct.ucred*, %struct.ucred** %4, align 8
  %10 = load %struct.ucred*, %struct.ucred** %5, align 8
  %11 = load %struct.ksem*, %struct.ksem** %6, align 8
  %12 = load %struct.ksem*, %struct.ksem** %6, align 8
  %13 = getelementptr inbounds %struct.ksem, %struct.ksem* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @MAC_POLICY_CHECK_NOSLEEP(i32 %8, %struct.ucred* %9, %struct.ucred* %10, %struct.ksem* %11, i32 %14)
  %16 = load i32, i32* @posixsem_check_stat, align 4
  %17 = load i32, i32* %7, align 4
  %18 = load %struct.ucred*, %struct.ucred** %4, align 8
  %19 = load %struct.ucred*, %struct.ucred** %5, align 8
  %20 = load %struct.ksem*, %struct.ksem** %6, align 8
  %21 = call i32 @MAC_CHECK_PROBE3(i32 %16, i32 %17, %struct.ucred* %18, %struct.ucred* %19, %struct.ksem* %20)
  %22 = load i32, i32* %7, align 4
  ret i32 %22
}

declare dso_local i32 @MAC_POLICY_CHECK_NOSLEEP(i32, %struct.ucred*, %struct.ucred*, %struct.ksem*, i32) #1

declare dso_local i32 @MAC_CHECK_PROBE3(i32, i32, %struct.ucred*, %struct.ucred*, %struct.ksem*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
